--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,7 @@
 @import "structure.scss";
 @import "nav.scss";
 @import "sectionOne.scss";
+@import "sectionTwo.scss";
+@import "sectionThree.scss";
+@import "footer.scss";
 
