--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -28,7 +28,7 @@ nav {
         border: 1px solid black;
         padding: 0px 0px;
         background-color: 0px;
-        margin-left: 10px;
+        margin-left: 20px;
         background: none;
         padding-left: 20px;
         padding-right: 20px;
@@ -38,6 +38,9 @@ nav {
         display: flex;
         
     }
-    .border:hover {cursor: pointer;}
+    .border:hover {cursor: pointer;
+    background-color:  hsl(256, 26%, 20%);
+    color:#fff;
+  }
   }
 }
