--- a/scss/sectionOne.scss
+++ b/scss/sectionOne.scss
@@ -7,9 +7,6 @@
   background-image: url('../images/bg-pattern-intro-right-desktop.svg');
   background-position: right;
   background-repeat: no-repeat;
-  background-size: contain;
-
-  
 
   .sectionOne-background-width {
     margin: 0 auto;
@@ -22,7 +19,9 @@
     max-width: 1200px;
     margin: 0 auto;
    
+   
     .sectionOne-left {
+        
       .sectionOne-border {
         border-top: 1px solid #fff;
         width: 150px;
@@ -32,8 +31,8 @@
         color: #fff;
         font-family: "DM Serif Display", serif;
         font-size: 50px;
-        letter-spacing: 0.1em;
-        line-height: 40px;
+        letter-spacing: .1em;
+        line-height: 50px;
       }
       p {
         max-width: 600px;
@@ -50,13 +49,18 @@
           padding-top: 10px;
           padding-bottom: 10px;
       }
+      button:hover {
+        cursor: pointer;
+        background-color: #fff;
+        color:  hsl(256, 26%, 20%);
+    }
     }
     .sectionOne-right {
-      background-image: url("../images/image-intro-desktop.jpg");
+        background-image: url("../images/image-intro-desktop.jpg");
       
-      height: 550px;
-      width: 510px;
-      margin-bottom: -100px;
+        height: 550px;
+        width: 510px;
+        margin-bottom: -100px;
     }
   }
 }
