--- a/scss/sectionThree.scss
+++ b/scss/sectionThree.scss
@@ -4,10 +4,10 @@
   background-color: hsl(256, 26%, 20%);
   display: flex;
   justify-content: space-between;
-  background-image: url('../images//bg-pattern-how-we-work-desktop.svg');
+  background-image: url("../images//bg-pattern-how-we-work-desktop.svg");
   background-repeat: no-repeat;
   background-position: right;
- background-size: 300px 350px;
+  background-size: 300px 350px;
   .sectionThree-left {
     padding-left: 50px;
     padding-right: 20px;
@@ -16,29 +16,53 @@
       font-family: "DM Serif Display", serif;
       color: #fff;
       font-size: 50px;
-      
     }
-    }
+  }
   .sectionThree-right {
     padding-left: 20px;
     padding-right: 200px;
-      max-width: 30%;
+    max-width: 30%;
+
+    button {
+      margin-top: 90px;
+      color: #fff;
+      border: 1px solid #fff;
+      text-transform: uppercase;
+      background: none;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    button:hover {
+      background-color: #fff;
+      color: hsl(256, 26%, 20%);
+      cursor: pointer;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .sectionThree {
+    display: flex;
+    flex-direction: column;
+    background-size: 300px 380px;
+    .sectionThree-left {
+      text-align: center;
+      padding-left: 95px;
+      padding-right: 20px;
+      h1 {}
+    }
+    .sectionThree-right {
+      margin: 0 auto;
      
+      padding-left: 20px;
+      padding-right: 20px;
       button {
-        margin-top: 90px;
-        color: #fff;
-        border: 1px solid #fff;
-        text-transform: uppercase;
-        background: none;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-      }
-      button:hover {
-        background-color: #fff;
-        color:  hsl(256, 26%, 20%);
-          cursor: pointer;
+        margin-top: 0px;
+       margin: 0 auto;
+        margin-bottom: 50px;
       }
     }
+  }
 }
