--- a/scss/sectionTwo.scss
+++ b/scss/sectionTwo.scss
@@ -1,13 +1,12 @@
 .sectionTwo {
+  padding-left: 20px;
+  padding-right: 20px;
     padding-top: 50px;
     padding-bottom: 50px;
     margin-top: 100px;
     margin-bottom: 50px;
-  
-  
   background-image: url('../images/bg-pattern-intro-left-desktop.svg');
   background-repeat: no-repeat;
-
   background-position: left;
 
   .sectionTwo-width {
@@ -16,8 +15,9 @@
     margin: 0 auto;
   .sectionTwo-border {
     padding-top: 20px;
-    border-top: 1px solid hsl(256, 26%, 20%);
-    max-width: 150px;
+    border-top: 1px solid hsl(273, 4%, 51%);
+    max-width: 200px;
+    padding-right: 20px;
   }
   .sectionTwo-top {
     h1 {
@@ -37,9 +37,38 @@
     .sectionTwo-col-1 {
       padding-left: 20px;
       padding-right: 20px;
+      p {color: hsl(273, 4%, 51%);}
     }
     .sectionTwo-col-1 {
     }
 }
+  }
+}
+
+@media (max-width: 700px) {
+  .sectionTwo-width {
+    
+    margin: 0 auto;
+
+    .sectionTwo-border {
+      margin: 0 auto;}
+    .sectionTwo-top {
+      text-align: center;
+    }
+    .sectionTwo-bottom {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+      max-width: 600px;
+      .sectionTwo-col-1 {
+        margin: 0 auto;
+        text-align: center;
+        max-width: 400px;
+        padding-left: 0px;
+        padding-right: 0px;
+      }
+      
+    }
   }
 }
